--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="gallery">
                 <div class="image-card">
                     <div class="image-wrapper">
-                        <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=800&h=450&fit=crop" alt="Mountain landscape">
+                        <img src="/public/kitkat1.jpeg" alt="Mountain landscape">
                     </div>
                     <div class="card-content">
                         <p class="image-description">
