--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="gallery">
                 <div class="image-card">
                     <div class="image-wrapper">
-                        <img src="/public/kitkat1.jpeg" alt="Kitkat1">
+                        <img src="/kitkat1.jpeg" alt="Kitkat1">
                     </div>
                     <div class="card-content">
                         <p class="image-description">
