--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
         <div class="header-container">
             <h1>Image Gallery</h1>
             <nav>
-                <button class="nav-btn active" data-page="home">  </button>
-                <button class="nav-btn" data-page="assignment1">Assignment 1</button>
-                <button class="nav-btn" data-page="assignment2">Assignment 2</button>
+                <button class="nav-btn active" data-page="home">Assignment 1 </button>
+                <button class="nav-btn" data-page="assignment1">Assignment 2</button>
+                <button class="nav-btn" data-page="assignment2">Assignment 3</button>
             </nav>
         </div>
     </header>
@@ -210,7 +210,7 @@
             <div class="gallery">
                 <div class="image-card">
                     <div class="image-wrapper">
-                        <img src="/kitkat1.jpeg" alt="Kitkat1">
+                        <img src="public/kitkat1.jpeg" alt="Kitkat1">
                     </div>
                     <div class="card-content">
                         <p class="image-description">
@@ -231,7 +231,7 @@
 
                 <div class="image-card">
                     <div class="image-wrapper">
-                        <img src="/public/K2.jpeg" alt="Ocean waves">
+                        <img src="public/K2.jpeg" alt="Ocean waves">
                     </div>
                     <div class="card-content">
                         <p class="image-description">
@@ -252,7 +252,7 @@
 
                 <div class="image-card">
                     <div class="image-wrapper">
-                        <img src="/public/pnear.jpeg" alt="Forest landscape">
+                        <img src="public/pnear.jpeg" alt="Forest landscape">
                     </div>
                     <div class="card-content">
                         <p class="image-description">
@@ -273,7 +273,7 @@
 
                 <div class="image-card">
                     <div class="image-wrapper">
-                        <img src="/public/pfar.jpeg" alt="Desert landscape">
+                        <img src="public/pfar.jpeg" alt="Desert landscape">
                     </div>
                     <div class="card-content">
                         <p class="image-description">
